[package]
name = "rust-analyzer"
version = "0.4.2"
edition = "2021"
description = "Exercism's automated analyzer for the Rust track."

[dependencies]
serde_json = "1.0.39"
thiserror = "1.0.44"

[dependencies.serde]
version = "1.0.91"
features = ["derive"]

[dependencies.clap]
version = "2.32.0"
default-features = false

[dependencies.syn]
version = "1.0"
features = ["full"]

[dev-dependencies]
rayon = "1.5"
