[package]
name = "rust-analyzer"
version = "0.4.2"
edition = "2021"
description = "Exercism's automated analyzer for the Rust track."

[dependencies]
serde_json = "1.0.39"
thiserror = "1.0.44"

[dependencies.serde]
version = "1.0.91"
features = ["derive"]

[dependencies.clap]
version = "4.0.0"
default-features = false
features = ["std"]

[dependencies.syn]
version = "2.0.27"
features = ["full"]

[dev-dependencies]
rayon = "1.5"
