[package]
name = "rust-analyzer"
version = "0.4.2"
edition = "2021"
description = "Exercism's automated analyzer for the Rust track."

[dependencies]
clap = { version = "4.3.19", default-features = false, features = ["std"] }
serde = { version = "1.0.176", features = ["derive"] }
serde_json = "1.0.104"
syn = { version = "2.0.27", features = ["full"] }
thiserror = "1.0.44"

[dev-dependencies]
rayon = "1.7"
