# IMPORTANT: These dependencies should be kept in sync with the ones at
# https://github.com/exercism/rust-analyzer/blob/main/local-registry/Cargo.toml
#
# Some crates are used by a large number of solutions. For example, when a crate
# is required or already included in the exercise skeleton. For those crates,
# we should NEVER drop support for a given major version. They have been marked
# with a "# pin" comment. We can continue to support old and new versions by
# giving the old ones an alias. An example is the rand_09 crate below.
# 
[dependencies]
anyhow = "1.0.102" # pin
arrayvec = "0.7.6"
arr_macro = "0.2.1"
ascii = "1.1.0"
bigdecimal = "0.4.10"
bimap = "0.6.3"
binary-heap-plus = "0.5.0"
bitflags = "2.12.1"
bit-set = "0.10.0"
bitvec = "1.0.1"
bstr = "1.12.1"
bytecount = "0.6.9"
cached = "1.1.0"
cast = "0.3.0"
chrono = "0.4.44"
convert_case = "0.11.0"
counter = "0.7.1"
criterion = "0.8.1"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.15"
crossbeam-utils = "0.8.21"
dashmap = "6.2.1"
derive_more = "2.1.1"
digits_iterator = "0.1.0"
divisors = "0.2.1"
divrem = "1.0.0"
duplicate = "2.0.1"
easybench = "1.1.1"
either = "1.16.0"
enum-iterator = "2.3.0"
enum-primitive-derive = "0.3.0"
enumset = "1.1.13"
fixedbitset = "0.5.7"
flagset = "0.4.7"
frunk = "0.4.4"
gcd = "2.3.0"
hashbag = "0.1.13"
hexlit = "0.5.5"
if_chain = "1.0.3"
im = "15.1.0"
indexmap = "2.14.0"
indoc = "2.0.7"
integer-sqrt = "0.1.5"
int-enum = "1.2.0"
itertools = "0.14.0"
itoa = "1.0.18"
kmp = "0.1.1"
linked-hash-map = "0.5.6"
linked_hash_set = "0.1.6"
maplit = "1.0.2"
memoize = "0.6.0"
mod_exp = "1.0.1"
modinverse = "0.1.1"
multimap = "0.10.1"
multiset = "0.0.5"
ndarray = "0.17.2"
nom = "8.0.0"
num = "0.4.3"
num-bigint = "0.4.6"
num_cpus = "1.17.0"
num-derive = "0.4.2"
num_enum = "0.7.6"
num-format = "0.4.4"
num-integer = "0.1.46"
numtoa = "1.0.0"
num-traits = "0.2.19"
pest = "2.8.5"
pest_derive = "2.8.5"
phf = "0.13.1"
phf_macros = "0.13.1"
pretty_assertions = "1.4.1"
proptest = "1.11.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
rand_09 = { package = "rand", version = "0.9.2" } # pin
rand = "0.10.1" # pin
rand_chacha = "0.10.0"
rayon = "1.12.0"
regex-lite = "0.1.8"
rstest = "0.26.1"
rstest_reuse = "0.7.0"
serde = "1.0.228"
serde_derive = "1.0.173"
spinning_top = "0.3.0"
static_assertions = "1.1.0"
strfmt = "0.2.5"
strum = "0.28.0"
strum_macros = "0.28.0"
subslice = "0.2.3"
thiserror = "2.0.18"
threadpool = "1.8.1"
time = "0.3.47" # pin
tinyset = "0.5.2"
transpose = "0.2.3"
unicase = "2.9.0"
unicode-normalization = "0.1.25"
unicode-reverse = "1.0.9"
unicode-segmentation = "1.13.3"
unic-segment = "0.9.0"
unzip-n = "0.1.4"
uuid = "1.23.2"
voca_rs = "1.15.2"
xvii = "0.4.0"

# The following is only needed so the Cargo.toml defines a valid package.

[package]
name = "dummy_package"
version = "0.1.0"
edition = "2024"

[lib]
path = "/dev/null"
